src/test/ui/stability-attribute/missing-stability-attr-at-top-level.stderr
error: crate has missing stability attribute
  --> $DIR/missing-stability-attr-at-top-level.rs:1:1
   |
LL | / #![feature(staged_api)]
LL | | //~^ ERROR crate has missing stability attribute
LL | |
LL | | fn main() {}
   | |____________^

error: aborting due to previous error

