src/test/ui/stability-attribute/missing-stability-attr-at-top-level.rs
#![feature(staged_api)]
//~^ ERROR crate has missing stability attribute

fn main() {}
